# mumak

./: .clang-format  .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  MUMAK.md  README.md  Vagrantfile  mumak  patch
artifact-evaluation/: .gitignore  build_images.sh  minimal_example.sh  plot_coverage.sh  plot_pmdk1dot6.sh  plot_pmdk1dot8.sh  plot_scalability.sh  run_agamotto.sh  run_coverage.sh  run_montage.sh  run_mumak_pmdk1dot8.sh  run_pmdebugger.sh  run_redis.sh  run_witcher.sh  run_xfdetector.sh
artifact-evaluation/plots/: histogram.cfg  plot-comparison-pmdk-1dot8.gp  plot-coverage.gp  plot-scalability.gp  pmdk-1dot6.dat.template
configs/: btree.cfg  btree.cfg.small  btree.cfg.template  btree_1000.cfg  btree_10000.cfg  btree_2000.cfg  btree_25000.cfg  btree_5000.cfg  btree_50000.cfg  btree_spt_50000.cfg  example.cfg.example  hashmap.cfg  hashmap.cfg.template  hashmap_1000.cfg  hashmap_10000.cfg  hashmap_2000.cfg  hashmap_25000.cfg  hashmap_5000.cfg  hashmap_50000.cfg  hashmap_spt_50000.cfg  mssql.cfg  nstore_tpcc.cfg  nstore_ycsb.cfg  pmem_redis.cfg.template  pmem_redis_1000.cfg  pmem_redis_10000.cfg  pmem_redis_100000.cfg  pmem_redis_2000.cfg  pmem_redis_25000.cfg  pmem_redis_5000.cfg  pmem_redis_50000.cfg  pmemkv.cfg  pmemkv.cfg.template  pmemkv_cmap_1000.cfg  pmemkv_cmap_10000.cfg  pmemkv_cmap_100000.cfg  pmemkv_cmap_2000.cfg  pmemkv_cmap_25000.cfg  pmemkv_cmap_5000.cfg  pmemkv_cmap_50000.cfg  (+32 more)
configs/witcher/: template_bfi.cfg  template_dofta.cfg
configs/witcher/bfi/: CCEH.cfg  FAST_FAIR.cfg  Level_Hashing.cfg  P-ART.cfg  P-BwTree.cfg  P-CLHT-Aga-TX.cfg  P-CLHT-Aga.cfg  P-CLHT.cfg  P-HOT.cfg  P-Masstree.cfg  btree.cfg  ctree.cfg  hashmap_atomic.cfg  hashmap_atomic_tx.cfg  rbtree-aga.cfg  rbtree.cfg  redis-3.2-nvml.cfg  woart.cfg  wort.cfg
configs/witcher/dofta/: CCEH.cfg  FAST_FAIR.cfg  Level_Hashing.cfg  P-ART.cfg  P-BwTree.cfg  P-CLHT-Aga-TX.cfg  P-CLHT-Aga.cfg  P-CLHT.cfg  P-HOT.cfg  P-Masstree.cfg  btree.cfg  ctree.cfg  hashmap_atomic.cfg  hashmap_atomic_tx.cfg  rbtree-aga.cfg  rbtree.cfg  redis-3.2-nvml.cfg  woart.cfg  wort.cfg
docker/: Dockerfile.apex  Dockerfile.cceh  Dockerfile.dash  Dockerfile.durinn  Dockerfile.ff  Dockerfile.memcached  Dockerfile.pclht  Dockerfile.pmemkv  Dockerfile.redis  Dockerfile.rocksdb  Dockerfile.seph  Dockerfile.tests  Dockerfile.turbo  Dockerfile.wipe  apex.diff  cceh.patch  durinn.patch  ff.patch  memcached.patch  pclht.patch  pclht_fixed.patch  seph.patch  turbo.patch  wipe.patch
docker/agamotto/: Dockerfile
docker/agamotto/drivers/: CMakeLists.txt
docker/agamotto/drivers/custom/: CMakeLists.txt  data_store_btree.c  data_store_btree_spt.c  data_store_hash.c  data_store_hash_spt.c  data_store_rbtree.c  data_store_rbtree_spt.c  hashmap_atomic.h  map_btree.c  map_hashmap_atomic.c  map_rbtree.c
docker/agamotto/scripts/: agamotto-full-test.sh  collect-resources.sh
docker/pmdebugger/: Dockerfile
docker/pmdebugger/drivers/: Makefile  data_store.c  data_store_spt.c
docker/pmdebugger/scripts/: collect-resources.sh  pmdebugger-test.sh
docker/xfdetector/: Dockerfile
docker/xfdetector/drivers/: data_store.c  data_store_hash.c
docker/xfdetector/scripts/: applicationTest.sh  xfdetector-test.sh
drivers/: Makefile  data_store_hash.c  data_store_hash_spt.c
instrumentation/src/: allocator.cpp  bfi.cpp  logger.hpp  makefile.rules  ofta.cpp  onta.cpp  trace.hpp  trace_analyzer.cpp  utils.hpp
instrumentation/src/tests/: test_fptree_serialize.cpp
mumak-artifact-evaluation/: README.md  plot_coverage.sh  plot_pmdk1dot6.sh  plot_pmdk1dot8.sh  plot_scalability.sh  run_agamotto.sh  run_all_pmdk1dot6.sh  run_all_pmdk1dot8.sh  run_all_scalability.sh  run_mumak_pmdk1dot6.sh  run_pmemkv.sh  run_rocksdb.sh  run_vanilla_pmdk1dot6.sh  run_vanilla_pmdk1dot8.sh  run_xfdetector.sh
mumak-artifact-evaluation/plots/: plot-comparison-pmdk-1dot6.gp  pmdk-1dot8.dat.template  scalability.dat.template
scripts/: get-annotations.sh  kill-pmem-redis.sh  kill-redis.sh  memcached_client.py  redis-cli-workload.sh  run-complete-pmdk.sh  run-redis.sh  setup_host.sh  workload_generator.py
src/: .gitignore  Makefile
src/analysis/: Makefile  acquire_calls.txt  cfg.cpp  cfg.hpp  disassembler.cpp  disassembler.hpp  palantir.cpp  release_calls.txt  statica.cpp  statica.hpp  x86.cpp  x86.hpp  x86_register_state.h
src/instrumentation/: allocator.h  bfi.cpp  cfg.hpp  collect_cfg.cpp  fp_tree.cpp  fp_tree.h  makefile.rules  ofta.cpp  onta.cpp  pifr_oftrace.cpp  pifr_trace.cpp  pin_utils.hpp  rwflow.cpp
src/instrumentation/tests/: test_fptree_deserialize.cpp
src/patching/: Makefile  patch_wrapper.py  patcher.c  stdlib.c
src/runtime/: Makefile  backend.hpp  constants.h  mmap_wrapper.c  pm_addr_checker.h  runtime.cpp  runtime.hpp  tbb_backend.cpp  tbb_backend.hpp  tracing.hpp
src/utils/: Makefile  mumak_oftp.cpp  pifr_oftp.cpp  reporter.cpp  time_parser.py  trace_parser.cpp  tracing.cpp  tracing.hpp
src/vardalith/: Cargo.toml  USAGE.md  example_config.toml
src/vardalith/src/: main.rs
src/vardalith/src/commands/: extras.rs  mod.rs  patch.rs  report.rs  results.rs  run.rs  trace.rs
src/vardalith/src/common/: config.rs  file_utils.rs  mod.rs  symbols.rs
vm-scripts/: custom.sh.example  env.sh  setup.sh
workloads/: workload_zipfian.txt  ycsb_100.txt  ycsb_1000.txt  ycsb_10000.txt  ycsb_100000.txt
